# lavoz-cloud

./: .env.example  .gitignore  AWS_SETUP_INSTRUCTIONS.md  AWS_cognito.txt  README.md  RELEASE_NOTES.md  SCHEDULED_BACKUPS_SETUP.md  cleanup-deps.sh  cleanup-system.sh  index.html  package-lock.json  package.json  setup-rclone.sh  test-config.json  vite.config.ts
.github/workflows/: deploy-storybook.yml
.storybook/: main.ts  preview.ts
docs/: STORYBOOK_UI_GUIDE.md
lambda/: README.md
lambda/create-iam-user/: index.js  package-lock.json  package.json
src/: App.css  App.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.example.json  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/src/: aws.rs  binary_resolver.rs  config.rs  dependencies.rs  downloader.rs  iam_storage.rs  lib.rs  main.rs  models.rs  rclone.rs  schedule.rs
src/__mocks__/: mockData.ts  tauri.ts  tauriDialog.ts
src/components/: AdminSetup.tsx  AdminSetupView.tsx  CloudBrowser.stories.tsx  CloudBrowser.tsx  CloudBrowserView.tsx  CognitoLogin.stories.tsx  CognitoLogin.tsx  CognitoLoginView.tsx  ConfigSetup.tsx  ConfigSetupView.tsx  Dashboard.stories.tsx  Dashboard.tsx  DashboardView.tsx  DependencyChecker.tsx  DependencyDownloader.tsx  DependencyDownloaderView.tsx  LanguageSwitcher.stories.tsx  LanguageSwitcher.tsx  Onboarding.tsx  OnboardingView.tsx  Settings.stories.tsx  Settings.tsx  SettingsView.tsx  Sidebar-backup.tsx  Sidebar.stories.tsx  Sidebar.tsx  SidebarView.tsx  SimpleDashboard.tsx  SimpleDashboardView.tsx  UserManagement.tsx  UserManagementView.tsx  UserSetup.tsx  (+1 more)
(+37 files in other folders)
